# paperbanana-light

./: .all-contributorsrc  .gitignore  README.md  app.py  demo.py  models.yaml  pipeline.py  pyproject.toml
agents/: __init__.py  captioner.py  config.py  critic.py  planner.py  polish.py  stylist.py  vanilla.py  visualizer.py
assets/: custom.css
configs/: models.yaml
retriever/: embedder.py
