[project]
name = "paperbanana-light"
version = "0.1.0"
description = "Academic figure generation with Agno agents"
requires-python = ">=3.12"
dependencies = [
    "agno",
    "chromadb",
    "dash",
    "dash-mantine-components",
    "dash-iconify",
    "google-genai",
    "pillow",
    "pydantic",
    "python-dotenv",
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["agents*", "retriever*"]
